[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Prefabs/UI/Themes/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://Script/Menus/MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Main Menu" type="Control"]
margin_top = 21.0
margin_right = 40.0
margin_bottom = 61.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TITLE" type="Label" parent="."]
margin_left = 102.0
margin_top = -4.0
margin_right = 218.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "ASTEROIDS"
align = 1
valign = 3
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 30.0
margin_top = 40.0
margin_right = 77.0
margin_bottom = 102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 47.0
margin_bottom = 62.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 43.0
margin_bottom = 62.0

[node name="Play" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 43.0
margin_bottom = 18.0
text = "Play"
flat = true

[node name="Options" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 43.0
margin_bottom = 40.0
disabled = true
text = "Options"
flat = true

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 43.0
margin_bottom = 62.0
text = "Exit"
flat = true
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
